--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,10 @@ unbind C-b
 # <prefix>*2でtmux内のプログラムに<prefix>を送る
 bind C-z send-prefix
 
+# vimのTrueColor対応
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # キーストロークのディレイを減らす
 set -g escape-time 0
 set -sg escape-time 0
