--- a/.tmux.conf
+++ b/.tmux.conf
@@ -67,9 +67,9 @@ setw -g mode-keys vi
 #set-option -g default-command "reattach-to-user-namespace -l zsh"
 ## コピーモードの操作をvi風に設定する
 bind-key -t vi-copy v begin-selection
-# bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind -t vi-copy Enter
-# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 #### COLOUR (Solarized 256)
 
